Fix Circle Alignment

--- a/my-react-app/src/index.css
+++ b/my-react-app/src/index.css
@@ -49,7 +49,7 @@ code {
   color: whitesmoke;
 }
 .icon-circle {
-  position: absolute;
+  position: relative;
   width: 64px;
   height: 64px;
   border-radius: 50%;
